<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="app_guide">App Guide</string>
    <string name="badgeview_demo_activity_title">BadgeView Demo</string>
    <string name="animation_demo_activity_title">Animation Demo</string>
    <string name="activity_card_demo_activity_title">ActivityCard Demo</string>
    <string name="calendar_card_demo_activity_title">CalendarCard Demo</string>
    <string name="number_progress_bar_demo_activity_title">NumberProgressBar Demo</string>
    <string name="view_pager_demo_activity_title">ViewPager Demo</string>
    <string name="view_pager_multi_fragment_demo_activity_title">ViewPager Multi Fragment Demo</string>
    <string name="search_view_demo_activity_title">SearchView Demo</string>
    <string name="rounded_image_view_demo_activity_title">Rounded Image View Demo</string>
    <string name="miui_tabpage_indicator_demo_activity_title">MIUI TabPage Indicator Demo</string>
    <string name="fragment_demo_activity_title">Fragment Demo</string>
    <string name="swipelistview_demo_activity_title">SwipeListView Demo</string>
    <string name="slideview_demo_activity_title">SlideView Demo</string>
    <string name="jpush_demo_activity_title">JPush Demo</string>
    <string name="share_demo_activity_title">Share Demo</string>
    <string name="friends_demo_activity_title">Friends Demo</string>
    <string name="login_demo_activity_title">Login Demo</string>
    <string name="guide">Guide</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="dialog">Dialog</string>
    <string name="viewpager">ViewPager</string>
    <string name="title">Calendar Card Sample</string>
    <string name="card">Calendar Card</string>
    <string name="card_pager">Calendar Card Pager</string>
    <string name="sel_date">Selected date: %s</string>
    <string name="finish">ProgressBar is finished.</string>
    <string name="title_list">ListView</string>
    <string name="title_views">Views</string>
    <string name="update_at">updated at:&#160;</string>
    <string name="github">GitHub</string>
    <string name="github_tip">Long Luo on GitHub</string>
    <string name="image_content">image</string>
    <string name="profile">Profile:&#160;</string>
    <string name="description">Description:&#160;</string>
    <string name="http_cache_get">Get content</string>
    <string name="drop_down_tip">Pull down to refresh or scroll to bottom to load more</string>
    <string name="on_border_tip">Scroll to top or bottom to experience</string>
    <string name="desc_search_view">SearchView Desc And Implement Search Tip</string>
    <string name="desc_view_pager_multi_page">Viewpager With Multi Page</string>
    <string name="desc_download_manager">Download Manager Usage</string>
    <string name="desc_slide_gallery">Slide One Page Gallery Usage</string>
    <string name="desc_view_pager">ViewPager And Fragment Usage</string>
    <string name="desc_service">Android Service Usage</string>
    <string name="desc_broadcast_receiver">Android BroadcastReceiver Usage</string>
    <string name="desc_border_scroll_view">BorderScrollView Usage</string>
    <string name="desc_drop_down_listview">Drop Down And On Bottom Listview</string>
    <string name="desc_image_cache">ImageCache Usage</string>
    <string name="desc_image_sdcard_cache">ImageSDCardCache Usage</string>
    <string name="desc_http_cache">HttpCache Usage</string>
    <string name="desc_auto_scroll_view_pager_inner">Autoscroll ViewPager in ViewPager Usage</string>
    <string name="desc_auto_scroll_view_pager">Autoscroll ViewPager Usage</string>
    <string name="desc_rounded_image_view">Rounded Image View Usage</string>
    <string name="desc_miui_tabpage_indicator">MIUI TabPage Indicator</string>
    <string name="desc_default">Long Luo</string>
    <string name="month">Month</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="title_benchmark">StackBlur Benchmark</string>
    <string name="java">Java</string>
    <string name="nativ">Native</string>
    <string name="renderscript">Renderscript</string>
    <string name="benchmark_start">Start Benchmark</string>
    <string name="label_blur_amount">Blur Amount</string>
    <string name="desc_blurred_img">Blurred Image</string>
    <string-array name="blur_modes">
        <item>@string/java</item>
        <item>@string/nativ</item>
        <item>@string/renderscript</item>
    </string-array>
    <string name="advanced_text_view">Advanced Text View</string>
    <string name="animated_compound_drawable">Animated CompoundDrawable</string>
    <string name="animated_compound_drawable_desc">animated-rotate and animation-list</string>
    <string name="animation">Animation</string>
    <string name="start_animation">Start animation</string>
    <string name="stop_animation">Stop animation</string>
    <string name="shadow_text">Text with shadow</string>
    <string name="shadow_text_desc">Shadow, blocky and glow</string>
    <string name="shadow">Shadow</string>
    <string name="blocky">Blocky</string>
    <string name="glow">Glow</string>
    <string name="custom_font">Custom font</string>
    <string name="custom_font_desc">Load from assets folder</string>
    <string name="non_breaking_space">Non-breaking space</string>
    <string name="non_breaking_space_desc">Prevent last word from dangling</string>
    <string name="non_breaking_space_text">A sentence that takes more than one line</string>
    <string name="non_breaking_space_text_nbsp">A sentence that takes more than one&#160;line</string>
    <string name="gradient_text">Gradient text</string>
    <string name="gradient_text_desc">LinearGradient</string>
    <string name="gradient">Gradient</string>
    <string name="patterned_text">Patterned text</string>
    <string name="patterned_text_desc">Tiling BitmapShader</string>
    <string name="cheetah">Cheetah</string>
    <string name="from_html">From HTML</string>
    <string name="from_html_desc">With links and images</string>
    <string name="from_html_text">
<![CDATA[
    <h1>Hello World</h1>
    Here is an <img src="octopus"><i>octopus</i>.<br>
    And here is a <a href="http://developer.android.com/reference/android/text/Html.html">link</a>.
    ]]>
    </string>
    <string name="fraction">Fraction</string>
    <string name="fraction_desc">TextPaint.setFontFeatureSettings()</string>
    <string name="fraction_text">
<![CDATA[
    1<afrc>1/2</afrc> + <afrc>11/16</afrc> = 2<afrc>3/16</afrc>
    <br>
    <br>
    <afrc>22/7</afrc>
    <afrc>355/113</afrc>
    <afrc>103993/33102</afrc>
    ]]>
    </string>
    <string name="styled_string">Styled string</string>
    <string name="styled_string_desc">TextAppearance from styles.xml</string>
    <string name="big_red">Big red</string>
    <string name="medium_green">Medium green</string>
    <string name="small_blue">Small blue</string>
    <string name="alignment_span">AlignmentSpan</string>
    <string name="alignment_span_desc">Chat window</string>
    <string name="add_to_left_button">L</string>
    <string name="add_to_right_button">R</string>
    <string name="alignment_span_line_1">Knock knock.</string>
    <string name="alignment_span_line_2">Who\'s there?</string>
    <string name="rainbow_span">Rainbow span</string>
    <string name="rainbow_span_desc">TextPaint with LinearGradient</string>
    <string name="rainbow">rainbow</string>
    <string name="rainbow_span_text">    Rainbow highlight! The text in the span is drawn with a LinearGradient as the Shader,
    creating a rainbow where the gradient width scales with the text size. In this demo, the
    highlighted term is also given a bold style.
</string>
    <string name="animated_rainbow_span">Animated rainbow span</string>
    <string name="animated_rainbow_span_desc">With ObjectAnimator</string>
    <string name="animated_rainbow_span_text">    To make an animated rainbow span, translate the Shader with a Matrix, and change the translation
    value with an ObjectAnimator.
</string>
    <string name="clickable_span">ClickableSpan</string>
    <string name="clickable_span_desc">Link to go to settings</string>
    <string name="clickable_span_text">    With ClickableSpan, you can make a link to go to settings in the middle of some text.
</string>
    <string name="go_to_settings">go to settings</string>
    <string name="lined_paper">Lined paper</string>
    <string name="lined_paper_desc">Draw baselines</string>
    <string name="lined_paper_text">    This is an EditText with baselines across its full width, taking paddings into account.
    Try changing the text and see it adjust the number of lines.
</string>
    <string name="emoji">Emoji</string>
    <string name="emoji_desc">Inline images</string>
    <string name="emoji_text">    To include inline images,
    You can use unicode &#x2665;&#x26c5; directly or &#x26f7; with an embedded font.
    You can define your own :octopus:, then load from resources with ImageSpan or
    draw :speed_50::speed_110: dynamically:speed_42:.</string>
    <string name="emoji_octopus">:octopus:</string>
    <string name="render_emoji">Render emoji</string>
    <string name="about">About</string>
    <string name="about_text">
<![CDATA[
    <p>
    Launcher icon generated by
    <a href="http://romannurik.github.io/AndroidAssetStudio/">Android Asset Studio</a>
    with Book Antiqua.
    </p>
    <p>
    <a href="http://www.colourlovers.com/pattern/2612403/Leopoard_Skin">Leopard skin pattern</a>
    by Nie Niez 1702 and svartedauden from COLOURlovers
    </p>
    <p>
    <a href="http://thenounproject.com/term/wifi/34656/">Wifi icon</a>
    by Alex Auda Samora from Noun Project
    </p>
    <p>
    Stacked fraction font
    <a href="https://github.com/TiroTypeworks/Nutso">Nutso</a>
    from TiroTypeworks
    </p>

    <p>
    <a href="http://www.colourlovers.com/palette/1757442/Rainbow_Connection">Rainbow Connection palette</a>
    by Luna Rosa from COLOURlovers.
    </p>
    ]]>
    </string>
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="diy_call_back">自定义回调</string>
    <string name="diy_call_back_ps">ps:网络定位由于精度低于gps，计算距离会有部分偏差</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="copyright">Copyright &#169; 2015 LuoLong. All Rights Reserved.</string>
    <string name="drawer_favorite">我的收藏</string>
    <string name="drawer_offline">离线下载</string>
    <string name="drawer_user_default_name">请登录</string>
    <string name="version">App V%1$s</string>
    <string name="terms_of_service">服务条款</string>
    <string name="copyright_time">Copyright © 2013&#8211;2016</string>
    <string name="sign_out">退出登录</string>
    <string name="push_setting">推送设置</string>
    <string name="change_password">修改密码</string>
    <string name="change_phonenum">更换手机号</string>
    <string name="clear_image_cache">清除缓存</string>
    <string name="invite_friends">邀请好友使用</string>
    <string name="feedback">意见反馈</string>
    <string name="app_recommed">应用推荐</string>
    <string name="version_update_check">检查更新</string>
</resources>