<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80.0dip"
        android:orientation="vertical">

        <View
            android:layout_width="120.0dip"
            android:layout_height="120.0dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/app_icon" />

        <TextView
            android:id="@+id/apk_version"
            style="@style/shadow_white_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20.0dip"
            android:text="@string/version"
            android:textColor="@color/gray_bg_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/service_textview"
            style="@style/shadow_white_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13.0dip"
            android:drawablePadding="7.0dip"
            android:text="@string/terms_of_service"
            android:textColor="@color/terms_of_service_text_color"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        style="@style/shadow_white_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60.0dip"
        android:text="@string/copyright"
        android:textColor="@color/normal_text_force_text_color"
        android:textSize="14sp" />

    <TextView
        style="@style/shadow_white_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="28.0dip"
        android:text="@string/copyright_time"
        android:textColor="@color/normal_text_force_text_color"
        android:textSize="14sp" />
</RelativeLayout>