<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:shadowColor="@color/shadow"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:text="@string/shadow"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:shadowColor="@color/green"
        android:shadowDx="4"
        android:shadowDy="-4"
        android:shadowRadius="1"
        android:text="@string/blocky"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/black"
        android:padding="12dp"
        android:shadowColor="@color/yellow"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="24"
        android:text="@string/glow"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold" />

</LinearLayout>