<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_top"
    android:layout_width="match_parent"
    android:layout_height="111.0dip"
    android:layout_alignParentTop="true"
    android:background="?drawer.background.primary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/drawer_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11.0dip"
        android:paddingLeft="16.0dip"
        android:paddingRight="16.0dip">

        <ImageView
            android:id="@+id/drawer_user_avatar"
            android:layout_width="33.0dip"
            android:layout_height="33.0dip"
            android:layout_centerVertical="true"
            android:layout_marginRight="13.0dip"
            android:src="@drawable/menu_avatar" />

        <TextView
            android:id="@+id/drawer_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/drawer_user_avatar"
            android:ellipsize="end"
            android:maxLines="2"
            android:maxWidth="96.0dip"
            android:singleLine="true"
            android:text="@string/drawer_user_default_name"
            android:textAppearance="?daily.textAppearance.drawer.primary" />

        <ImageView
            android:id="@+id/drawer_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="146.0dip"
            android:padding="16.0dip"
            android:src="@drawable/drawer_activity"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/drawer_user"
        android:orientation="horizontal"
        android:paddingLeft="16.0dip"
        android:paddingTop="26.0dip">

        <LinearLayout
            android:id="@+id/drawer_favorite"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorites" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:text="@string/drawer_favorite"
                android:textAppearance="?daily.textAppearance.drawer.secondary"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_offline"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/drawer_offline_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/download" />

            <TextView
                android:id="@+id/drawer_offline_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16.0dip"
                android:text="@string/drawer_offline"
                android:textAppearance="?daily.textAppearance.drawer.secondary"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>